version/0.5/_sources/_autosummary/ansys.api.pyensight.ens_part_axisymmetric.ENS_PART_AXISYMMETRIC.rst.txt
ENS\_PART\_AXISYMMETRIC
=======================

.. currentmodule:: ansys.api.pyensight.ens_part_axisymmetric

.. autoclass:: ENS_PART_AXISYMMETRIC

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      ENS_PART_AXISYMMETRIC.attrgroupinfo
      
      
      ENS_PART_AXISYMMETRIC.attrinfo
      
      
      ENS_PART_AXISYMMETRIC.attrissensitive
      
      
      ENS_PART_AXISYMMETRIC.attrtree
      
      
      ENS_PART_AXISYMMETRIC.cmdlang_rec_info
      
      
      ENS_PART_AXISYMMETRIC.createpart
      
      
      ENS_PART_AXISYMMETRIC.destroy
      
      
      ENS_PART_AXISYMMETRIC.get_values
      
      
      ENS_PART_AXISYMMETRIC.getattr
      
      
      ENS_PART_AXISYMMETRIC.getattrs
      
      
      ENS_PART_AXISYMMETRIC.getmetatag
      
      
      ENS_PART_AXISYMMETRIC.hasmetatag
      
      
      ENS_PART_AXISYMMETRIC.populate_attr_list
      
      
      ENS_PART_AXISYMMETRIC.realtimemode
      
      
      ENS_PART_AXISYMMETRIC.setattr
      
      
      ENS_PART_AXISYMMETRIC.setattr_begin
      
      
      ENS_PART_AXISYMMETRIC.setattr_end
      
      
      ENS_PART_AXISYMMETRIC.setattr_status
      
      
      ENS_PART_AXISYMMETRIC.setattrs
      
      
      ENS_PART_AXISYMMETRIC.setmetatag
      
      
      ENS_PART_AXISYMMETRIC.tracepaths
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ENS_PART_AXISYMMETRIC.ACTIVE
      ENS_PART_AXISYMMETRIC.ADJCOORDSCALEFACTOR
      ENS_PART_AXISYMMETRIC.ADJCOORDTRANSVEC
      ENS_PART_AXISYMMETRIC.ADJCOORDVARSCALEFACTOR
      ENS_PART_AXISYMMETRIC.ADJCOORDXVARIABLE
      ENS_PART_AXISYMMETRIC.ADJCOORDYVARIABLE
      ENS_PART_AXISYMMETRIC.ADJCOORDZVARIABLE
      ENS_PART_AXISYMMETRIC.ALPHABY
      ENS_PART_AXISYMMETRIC.ALPHABYPALETTE
      ENS_PART_AXISYMMETRIC.AXIS
      ENS_PART_AXISYMMETRIC.BOUNDINGREP
      ENS_PART_AXISYMMETRIC.CASENUMBER
      ENS_PART_AXISYMMETRIC.CLIP
      ENS_PART_AXISYMMETRIC.COLORBYPALETTE
      ENS_PART_AXISYMMETRIC.COLORBYRGB
      ENS_PART_AXISYMMETRIC.CULLELEMENTS
      ENS_PART_AXISYMMETRIC.DESCRIPTION
      ENS_PART_AXISYMMETRIC.DIRECTIONVECTOR
      ENS_PART_AXISYMMETRIC.DISPLACEBY
      ENS_PART_AXISYMMETRIC.DISPLACEFACTOR
      ENS_PART_AXISYMMETRIC.DOUBLESIDED
      ENS_PART_AXISYMMETRIC.DTA_BLOCK
      ENS_PART_AXISYMMETRIC.EDIT_TARGET
      ENS_PART_AXISYMMETRIC.ELTBLANKING
      ENS_PART_AXISYMMETRIC.ELTDEFINEDBY
      ENS_PART_AXISYMMETRIC.ELTFEATUREANGLE
      ENS_PART_AXISYMMETRIC.ELTFILTER1ACTIVE
      ENS_PART_AXISYMMETRIC.ELTFILTER1TESTOP
      ENS_PART_AXISYMMETRIC.ELTFILTER1TESTVALUE
      ENS_PART_AXISYMMETRIC.ELTFILTER1TESTVARCOMP
      ENS_PART_AXISYMMETRIC.ELTFILTER1TESTVARIABLE
      ENS_PART_AXISYMMETRIC.ELTFILTER1VARCOMP
      ENS_PART_AXISYMMETRIC.ELTFILTER1VARIABLE
      ENS_PART_AXISYMMETRIC.ELTFILTER2ACTIVE
      ENS_PART_AXISYMMETRIC.ELTFILTER2LOGICALOP
      ENS_PART_AXISYMMETRIC.ELTFILTER2TESTOP
      ENS_PART_AXISYMMETRIC.ELTFILTER2TESTVALUE
      ENS_PART_AXISYMMETRIC.ELTFILTER2TESTVARCOMP
      ENS_PART_AXISYMMETRIC.ELTFILTER2TESTVARIABLE
      ENS_PART_AXISYMMETRIC.ELTFILTER2VARCOMP
      ENS_PART_AXISYMMETRIC.ELTFILTER2VARIABLE
      ENS_PART_AXISYMMETRIC.ELTFILTER3ACTIVE
      ENS_PART_AXISYMMETRIC.ELTFILTER3LOGICALOP
      ENS_PART_AXISYMMETRIC.ELTFILTER3TESTOP
      ENS_PART_AXISYMMETRIC.ELTFILTER3TESTVALUE
      ENS_PART_AXISYMMETRIC.ELTFILTER3TESTVARCOMP
      ENS_PART_AXISYMMETRIC.ELTFILTER3TESTVARIABLE
      ENS_PART_AXISYMMETRIC.ELTFILTER3VARCOMP
      ENS_PART_AXISYMMETRIC.ELTFILTER3VARIABLE
      ENS_PART_AXISYMMETRIC.ELTFILTER4ACTIVE
      ENS_PART_AXISYMMETRIC.ELTFILTER4LOGICALOP
      ENS_PART_AXISYMMETRIC.ELTFILTER4TESTOP
      ENS_PART_AXISYMMETRIC.ELTFILTER4TESTVALUE
      ENS_PART_AXISYMMETRIC.ELTFILTER4TESTVARCOMP
      ENS_PART_AXISYMMETRIC.ELTFILTER4TESTVARIABLE
      ENS_PART_AXISYMMETRIC.ELTFILTER4VARCOMP
      ENS_PART_AXISYMMETRIC.ELTFILTER4VARIABLE
      ENS_PART_AXISYMMETRIC.ELTFILTER5ACTIVE
      ENS_PART_AXISYMMETRIC.ELTFILTER5LOGICALOP
      ENS_PART_AXISYMMETRIC.ELTFILTER5TESTOP
      ENS_PART_AXISYMMETRIC.ELTFILTER5TESTVALUE
      ENS_PART_AXISYMMETRIC.ELTFILTER5TESTVARCOMP
      ENS_PART_AXISYMMETRIC.ELTFILTER5TESTVARIABLE
      ENS_PART_AXISYMMETRIC.ELTFILTER5VARCOMP
      ENS_PART_AXISYMMETRIC.ELTFILTER5VARIABLE
      ENS_PART_AXISYMMETRIC.ELTFILTER6ACTIVE
      ENS_PART_AXISYMMETRIC.ELTFILTER6LOGICALOP
      ENS_PART_AXISYMMETRIC.ELTFILTER6TESTOP
      ENS_PART_AXISYMMETRIC.ELTFILTER6TESTVALUE
      ENS_PART_AXISYMMETRIC.ELTFILTER6TESTVARCOMP
      ENS_PART_AXISYMMETRIC.ELTFILTER6TESTVARIABLE
      ENS_PART_AXISYMMETRIC.ELTFILTER6VARCOMP
      ENS_PART_AXISYMMETRIC.ELTFILTER6VARIABLE
      ENS_PART_AXISYMMETRIC.ELTREPPOINTSNORMALS
      ENS_PART_AXISYMMETRIC.ELTREPRESENTATION
      ENS_PART_AXISYMMETRIC.ELTSHRINKFACTOR
      ENS_PART_AXISYMMETRIC.ENS_DETAILS
      ENS_PART_AXISYMMETRIC.ENS_KIND
      ENS_PART_AXISYMMETRIC.ENS_MATERIAL
      ENS_PART_AXISYMMETRIC.ENS_PARENT_PART
      ENS_PART_AXISYMMETRIC.ENS_PLIST_KEY_SEL_0
      ENS_PART_AXISYMMETRIC.ENS_PLIST_KEY_SEL_1
      ENS_PART_AXISYMMETRIC.ENS_PLIST_KEY_SEL_2
      ENS_PART_AXISYMMETRIC.ENS_PLIST_KEY_SEL_3
      ENS_PART_AXISYMMETRIC.ENS_PLIST_KEY_SEL_4
      ENS_PART_AXISYMMETRIC.ENS_PLIST_KEY_SEL_5
      ENS_PART_AXISYMMETRIC.ENS_PLIST_KEY_SEL_6
      ENS_PART_AXISYMMETRIC.ENS_PLIST_KEY_SEL_7
      ENS_PART_AXISYMMETRIC.ENS_PLIST_KEY_SEL_8
      ENS_PART_AXISYMMETRIC.ENS_PLIST_KEY_SEL_9
      ENS_PART_AXISYMMETRIC.ENS_SYMMETRY_AXIS
      ENS_PART_AXISYMMETRIC.ENS_SYMMETRY_COUNT
      ENS_PART_AXISYMMETRIC.ENS_TURBO_STAGE
      ENS_PART_AXISYMMETRIC.ENS_TURBO_VDIM
      ENS_PART_AXISYMMETRIC.ENS_TURBO_VIEW
      ENS_PART_AXISYMMETRIC.ENS_UNITS_LABEL
      ENS_PART_AXISYMMETRIC.ENTITYLABELELT
      ENS_PART_AXISYMMETRIC.ENTITYLABELNODE
      ENS_PART_AXISYMMETRIC.FILLPATTERN
      ENS_PART_AXISYMMETRIC.HANDLES_ENABLED
      ENS_PART_AXISYMMETRIC.HAS0DELEMENTS
      ENS_PART_AXISYMMETRIC.HAS1DELEMENTS
      ENS_PART_AXISYMMETRIC.HAS2DELEMENTS
      ENS_PART_AXISYMMETRIC.HAS3DELEMENTS
      ENS_PART_AXISYMMETRIC.HIDDENLINE
      ENS_PART_AXISYMMETRIC.HIDDENSURFACE
      ENS_PART_AXISYMMETRIC.IJKAXIS
      ENS_PART_AXISYMMETRIC.IJKAXISSCALE
      ENS_PART_AXISYMMETRIC.ISGROUP
      ENS_PART_AXISYMMETRIC.LIGHTAMBIENT
      ENS_PART_AXISYMMETRIC.LIGHTDIFFUSE
      ENS_PART_AXISYMMETRIC.LIGHTEMISSIVE
      ENS_PART_AXISYMMETRIC.LIGHTREFRACTION
      ENS_PART_AXISYMMETRIC.LIGHTSPECULARINTENSITY
      ENS_PART_AXISYMMETRIC.LIGHTSPECULARREFLECTION
      ENS_PART_AXISYMMETRIC.LIGHTSPECULARSHINE
      ENS_PART_AXISYMMETRIC.LIGHTSPECULARTINT
      ENS_PART_AXISYMMETRIC.LINESTYLE
      ENS_PART_AXISYMMETRIC.LINEWIDTH
      ENS_PART_AXISYMMETRIC.LPARTPARENT
      ENS_PART_AXISYMMETRIC.MATERIALBASETYPE
      ENS_PART_AXISYMMETRIC.MATERIALDESCRIPTION
      ENS_PART_AXISYMMETRIC.MESHTYPE
      ENS_PART_AXISYMMETRIC.METADATA
      ENS_PART_AXISYMMETRIC.MIRRORORIGINAL
      ENS_PART_AXISYMMETRIC.NODEDETAIL
      ENS_PART_AXISYMMETRIC.NODERANGESTEPI
      ENS_PART_AXISYMMETRIC.NODERANGESTEPJ
      ENS_PART_AXISYMMETRIC.NODERANGESTEPK
      ENS_PART_AXISYMMETRIC.NODESCALE
      ENS_PART_AXISYMMETRIC.NODESIZEBY
      ENS_PART_AXISYMMETRIC.NODETYPE
      ENS_PART_AXISYMMETRIC.NODEVARIABLE
      ENS_PART_AXISYMMETRIC.NUMOFSLICES
      ENS_PART_AXISYMMETRIC.OPAQUENESS
      ENS_PART_AXISYMMETRIC.ORIGIN
      ENS_PART_AXISYMMETRIC.ORIGINBYPARTCENTROID
      ENS_PART_AXISYMMETRIC.PARENT
      ENS_PART_AXISYMMETRIC.PARTID
      ENS_PART_AXISYMMETRIC.PARTNUMBER
      ENS_PART_AXISYMMETRIC.PARTNUMELE
      ENS_PART_AXISYMMETRIC.PARTNUMELECLIENT
      ENS_PART_AXISYMMETRIC.PARTTYPE
      ENS_PART_AXISYMMETRIC.PARTTYPEENUM
      ENS_PART_AXISYMMETRIC.PATHNAME
      ENS_PART_AXISYMMETRIC.PERIODICSECTIONS
      ENS_PART_AXISYMMETRIC.PREDEFINEDMATERIAL
      ENS_PART_AXISYMMETRIC.PROJECT_MASK
      ENS_PART_AXISYMMETRIC.REDUCEPOLYGONS
      ENS_PART_AXISYMMETRIC.REDUCEPOLYGONSFACTOR
      ENS_PART_AXISYMMETRIC.REFFRAME
      ENS_PART_AXISYMMETRIC.RENDERINGREFLECTIONID
      ENS_PART_AXISYMMETRIC.REVERSENORMAL
      ENS_PART_AXISYMMETRIC.SELECTED
      ENS_PART_AXISYMMETRIC.SHADING
      ENS_PART_AXISYMMETRIC.SHOWSFT
      ENS_PART_AXISYMMETRIC.SOURCES
      ENS_PART_AXISYMMETRIC.SPECIFYSYMMETRYORIGIN
      ENS_PART_AXISYMMETRIC.SYMMETRYANGLE
      ENS_PART_AXISYMMETRIC.SYMMETRYAXIS
      ENS_PART_AXISYMMETRIC.SYMMETRYDELTA
      ENS_PART_AXISYMMETRIC.SYMMETRYMIRRORX
      ENS_PART_AXISYMMETRIC.SYMMETRYMIRRORXY
      ENS_PART_AXISYMMETRIC.SYMMETRYMIRRORXYZ
      ENS_PART_AXISYMMETRIC.SYMMETRYMIRRORXZ
      ENS_PART_AXISYMMETRIC.SYMMETRYMIRRORY
      ENS_PART_AXISYMMETRIC.SYMMETRYMIRRORYZ
      ENS_PART_AXISYMMETRIC.SYMMETRYMIRRORZ
      ENS_PART_AXISYMMETRIC.SYMMETRYORIGIN
      ENS_PART_AXISYMMETRIC.SYMMETRYRINSTANCES
      ENS_PART_AXISYMMETRIC.SYMMETRYTYPE
      ENS_PART_AXISYMMETRIC.TEXTURECOORDTYPE
      ENS_PART_AXISYMMETRIC.TEXTUREINTERPOLATION
      ENS_PART_AXISYMMETRIC.TEXTUREMODE
      ENS_PART_AXISYMMETRIC.TEXTUREOBJECT
      ENS_PART_AXISYMMETRIC.TEXTUREORIGIN
      ENS_PART_AXISYMMETRIC.TEXTUREORIGINNODEID
      ENS_PART_AXISYMMETRIC.TEXTUREORIGINUSE
      ENS_PART_AXISYMMETRIC.TEXTUREREPEATMODE
      ENS_PART_AXISYMMETRIC.TEXTURESORIGINNODEID
      ENS_PART_AXISYMMETRIC.TEXTURESVARIABLE
      ENS_PART_AXISYMMETRIC.TEXTURESVECTOR
      ENS_PART_AXISYMMETRIC.TEXTURETORIGINNODEID
      ENS_PART_AXISYMMETRIC.TEXTURETVARIABLE
      ENS_PART_AXISYMMETRIC.TEXTURETVECTOR
      ENS_PART_AXISYMMETRIC.TOTALROTATION
      ENS_PART_AXISYMMETRIC.TOTALTRANSLATION
      ENS_PART_AXISYMMETRIC.TYPE
      ENS_PART_AXISYMMETRIC.UUID
      ENS_PART_AXISYMMETRIC.VIEWPORTVIS
      ENS_PART_AXISYMMETRIC.VISIBILITYELT
      ENS_PART_AXISYMMETRIC.VISIBILITYLINE
      ENS_PART_AXISYMMETRIC.VISIBILITYNODE
      ENS_PART_AXISYMMETRIC.VISIBLE
      ENS_PART_AXISYMMETRIC.VOLUMEQUALITY
      ENS_PART_AXISYMMETRIC.VOLUMERENDERINGTYPE
      ENS_PART_AXISYMMETRIC.__OBJID__
      ENS_PART_AXISYMMETRIC.objid
   
   